--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
     border-radius: 20px;
 }
 
+.tw-btn-light{
+    color: #009df6;
+    border:solid 1px #009df6;
+    border-radius: 24px;
+}
+
+.tw-btn-light:hover{
+    color: white;
+    background-color: #009df6;
+    border:none;
+}
+
 .tw-card-gray{
     background-color: #f4f8fa;
 }
@@ -37,6 +49,10 @@
 
 .tw-border-left{
     border-left: solid 1px #e5ecf0 !important;
+}
+
+.tw-border-bottom{
+    border-bottom: solid 1px #e5ecf0 !important;
 }
 
 .tw-list-group-item {
